@@ -13,20 +13,27 @@ import androidx.compose.ui.Modifier
 import androidx.compose.ui.text.style.TextAlign
 import androidx.compose.ui.unit.dp
 import androidx.compose.ui.unit.sp
+import org.jetbrains.compose.resources.ExperimentalResourceApi
+import org.jetbrains.compose.resources.stringResource
+import zealotry.composeapp.generated.resources.Res
+import zealotry.composeapp.generated.resources.day
+import zealotry.composeapp.generated.resources.evening
+import zealotry.composeapp.generated.resources.morning
 
+@OptIn(ExperimentalResourceApi::class)
 @Composable
 fun MainMenuScreen(viewModel: MainMenuViewModel, onNavigate: (String)->Unit) {
     val uiState by viewModel.uiState.collectAsState()
 
     Column(Modifier.fillMaxWidth(), horizontalAlignment = Alignment.CenterHorizontally){
         Text(
-            text = "Placeholder MorningMenu",
+            text = "Placeholder MainMenu",
             modifier = Modifier.padding(20.dp),
             fontSize = 24.sp,
             textAlign = TextAlign.Center
         )
-        OutlinedButton(onClick = {onNavigate("Morning")}){ Text("Morning") }
-        OutlinedButton(onClick = {onNavigate("Day")}){ Text("Day") }
-        OutlinedButton(onClick = {onNavigate("Evening")}){ Text("Evening") }
+        OutlinedButton(onClick = {onNavigate("Morning")}){ Text(text=stringResource(Res.string.morning)) }
+        OutlinedButton(onClick = {onNavigate("Day")}){ Text(text=stringResource(Res.string.day)) }
+        OutlinedButton(onClick = {onNavigate("Evening")}){ Text(text=stringResource(Res.string.evening)) }
     }
 }
